# renode_my_sample

./: CMakeLists.txt  README.md
linker/: stm32f407vgt.ld
script/: add-ccm.repl  renode-config.resc  stm32f4_discovery-custom.repl
src/: CMakeLists.txt  main.c  syscalls.c  system_stm32f4xx.c
visualize/: index.html  vis.py
visualize/assets/: style.css
